Add Kafka ownership lifecycle tests
Co-authored-by: trask <218610+trask@users.noreply.github.com>